# pfagent

./: README.md
text-to-sim/: EI_33_out.txt  README.md  main.py  pyproject.toml  requirements.txt
text-to-sim/code_executions/476e2c80-cb55-4df0-80f0-49fd0b090ca5/data/: exec_code_-1689038265271545410.py  exec_code_4317163015039614564.py  exec_code_7025192883163983078.py  exec_code_7454964823696717435.py  exec_code_8583188985333221344.py
text-to-sim/code_executions/4acc8b32-2b9f-40ec-baf9-d9fd8a48899e/data/: exec_code_-6072430225551475581.py
text-to-sim/code_executions/4b2e6e8c-ac2c-4fe0-8a15-20f821f13d2d/data/: exec_code_-3480986495513536140.py  exec_code_-5335463061300616922.py  exec_code_-8880265366117259829.py  exec_code_4062986474313578000.py  exec_code_8322989574676776387.py  exec_code_8391897757767230900.py
text-to-sim/code_executions/6822a8bb-0558-4683-968e-00616e951974/data/: exec_code_-1143780683181563607.py  exec_code_30503960671661622.py  exec_code_3413642341968017681.py
text-to-sim/code_executions/6ef5ca86-cc79-4519-911b-01ff7110a539/data/: exec_code_-1292333123202572143.py  exec_code_-411087819623069877.py  exec_code_-6139674637721769987.py  exec_code_2013130758779938776.py  ieee39_out.txt
text-to-sim/data_files/: few_shot_andes.json  metadata.json
text-to-sim/data_files/feedback/: feedback_000cddec-a073-4c8e-aa9b-45468aebfbb2_20250905_150511.json  feedback_log.jsonl
text-to-sim/src/: analysis.py  andes_case_catalog.py  auth.py  chatbot_factory.py  documents.py  faiss.py  few_shot.py  files.py  metadata.py  session.py  ui.py
(+79 files in other folders)
